<resources>
    <string name="app_name">Gigzz</string>
    <string name="something_went_wro">Something went wrong! Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_1_subtitle">Connect, Collaborate, and Earn!</string>
    <string name="onboarding_2_subtitle">Where Teens And Young Adults Help You Get Things Done.</string>
    <string name="onboarding_3_subtitle">Explore Engaging Projects and Earn For Your Skills.</string>
    <string name="skip">Skip</string>
    <string name="start">Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_credentials">Please enter your credentials to continue.</string>
    <string name="hint_mail">Enter your email id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_password">Enter your password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_pass_instruction">Please create a strong password to secure your account </string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="remember_password">I remember my password Sign In?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="not_having_account"><font color="#A1A1A1">Don\'t have an account? </font>Register now</string>
    <string name="resend_otp"><font color="#A1A1A1">Didn\'t receive the OTP?</font> Resend OTP</string>
    <string name="register">Register</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="sign_in">Sign In?</string>
    <string name="register_now">Register now</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Full name</string>
    <string name="create_profile">Create Your Gigzz Profile</string>
    <string name="profile_today">Unlock Endless Opportunities: Create Your Gigzz Profile Today!</string>
    <string name="privacy_policy">By signing up, you’ll agree to our Terms of Service and Privacy Policy</string>
    <string name="age_group">Your Age Group</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="current_address">Current address</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="dob">DOB</string>
    <string name="interest">Interests</string>
    <string name="interests_ques">Interests?</string>
    <string name="skills">Skills</string>
    <string name="skills_attributes">Skills/Attributes</string>
    <string name="profile_setup">Profile set-up</string>
    <string name="update">Update</string>
    <string name="plrase_specify">Please Specify</string>
    <string name="please_upload_pic">Please upload your profile picture.</string>
    <string name="please_upload_logo">Please upload your logo.</string>
    <string name="upload_pic"><u>Upload Profile Picture</u></string>
    <string name="upload_logo"><u>Upload Your Logo</u></string>
    <string name="finish">Finish</string>
    <string name="user_type">User Type Selection</string>
    <string name="select_user_type">Creating Your Unique Profile Based on Your Selection</string>
    <string name="usertype1">Helping Hands</string>
    <string name="usertype2">Individual job giver</string>
    <string name="usertype3">Company</string>
    <string name="need_help">Need Help</string>
    <string name="no_internet">Please check your internet connection and try again.</string>
    <string name="verify">Verify</string>
    <string name="enter_mail_for_verify">Please enter your email for verification</string>
    <string name="enter_mail">Enter Your Email!</string>
    <string name="already_have_account"><font color="#A1A1A1">Already have an account?</font> Sign In</string>
    <string name="enter_otp">Enter your 6-digit OTP</string>
    <string name="message_otp">We have sent a OTP to the email address %1$s</string>
    <string name="verify_mail">Verify Email</string>
    <string name="continue_btn_text">Continue</string>
    <string name="home_search_hint">Search for Company, People, Jobs or Hastags</string>
    <string name="feed_text">Feed</string>
    <string name="all">All</string>
    <string name="company">Company</string>
    <string-array name="job_status">
        <item>Hired</item>
        <item>Rejected</item>
        <item>Interview</item>
    </string-array>
    <string name="gigzz">Gigzz</string>
    <string name="get_help">Get Help</string>
    <string name="gigzz_desc">For teens looking for jobs &amp; gigzz</string>
    <string name="get_help_desc">For people who need help with odd jobs</string>
    <string name="company_desc">Recruiting talented teens</string>
    <string name="no_block_user">Yay! No Blocked Users!</string>
    <string name="no_block_user_msg">You haven’t blocked anyone.Your block list is empty.</string>
    <string name="no_post_found">Oops! No Posts Yet!</string>
    <string name="no_post_text">Looks like this user hasn’t posted anything yet!</string>
    <string name="no_connection">No Connections Yet!</string>
    <string name="no_requests">No Requests Found!</string>
    <string name="no_messages">No Messages Yet!</string>
    <string name="no_comments">No Comments Yet!</string>
    <string name="profile_state">introduce yourself to the others.</string>
    <string name="your_mail">Email</string>
    <string name="gender">Gender</string>
    <string name="your_age_group">Your Age Group</string>
    <string name="parent_mail">Parent Mail Id</string>
    <string name="brief">Describe yourself</string>
    <string name="permit">Work permit</string>
    <string name="Add">Address</string>
    <string name="please_specify">Please specify</string>
    <string name="basic_details">Basic Details</string>
    <string name="enter_details">Enter your personal details below.</string>
    <string name="enter_dob">Enter your date of birth.</string>
    <string name="details">Please provide some Basic details about yourself.</string>
    <string name="hiring_name">Hiring Name</string>
    <string name="job_address">Company Address</string>
    <string name="company_des">Company Description</string>
    <string name="job_title">Job Title</string>
    <string name="industry">Industry Type</string>
    <string name="begin_text">Explore Engaging Projects and Earn For Your Skills.</string>
    <string name="designation">Assistant Manager</string>
    <string name="job_experience">1+ year</string>
    <string name="opportunity">Opportunities</string>
    <string name="no_opportunity">No Opportunities Available!</string>
    <string name="company_details">Enter company details below.</string>
    <string name="job_desc">Job Details</string>
    <string name="details_job">Enter Job details below.</string>
    <string name="no_likes">No Likes Yet!</string>
    <string name="no_notification">No Notification Yet!</string>
    <string name="no_jobs">No Jobs Available!</string>
    <string name="no_filter_jobs">No filter data were found, please filter data again</string>
    <string name="no_post">No Post Available!</string>
    <string name="no_msg_body">No message in your chat history.\nStart chatting with your connections today!</string>
    <string name="no_chat_msg">It seems you both didn’t had conversation!\nStart your conversation today.</string>
    <string name="no_requests_msg">You currently don\'t have any Pending Requests.</string>
    <string name="no_connection_msg">You currently don\'t have any connections.Send connection requests and expand your network.</string>
    <string name="no_review">Oops! No Reviews Yet!</string>
    <string name="no_review_msg">The user doesn\'t have any reviews to display at the moment.</string>
    <string name="connect">Connect</string>
    <string name="school">School</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="grade_degree">Grade/ Degree</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="company_profile">Company Profile</string>
    <string name="get_help_2">Get Help!</string>
    <string name="detail_passion">Discover New Opportunities to Make Money. Start here. List all the Areas You are Interested in.</string>
    <string name="get_help_subtitle">Need an extra hand with yard work? Looking for a tutor for your children? Connect with local teens who are ready to help!</string>
    <string name="education_details">Education Details</string>
    <string name="your_education_details">Let people know about your education.</string>
    <string name="lorem_ipsum_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_date">Posted on 06/12/2024</string>
    <string name="posted_jobs">Posted Jobs</string>
    <string name="new_jobs">New Job</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="action_connect">Connect +</string>
    <string name="requests">Requests</string>
    <string name="delete_your_comments">Do you want to delete your comments?</string>
    <string name="delete_your_posts">Do you want to delete your posts?</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_post">Delete Post</string>
    <string name="requested">Requested</string>
    <string name="matching_profile">Matching Profile</string>
    <string name="see_all"><u>See All</u></string>
    <string name="notification">Notifications</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="profile_lock_heading">Profile is locked</string>
    <string name="profile_lock_msg">Kindly send a connection request, to view their profile and their connections </string>
    <string name="create_post">Create Post</string>
    <string name="overview">Overview</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
</resources>