<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.SignInFragment">

    <ImageView
        android:id="@+id/upr_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/upr_design"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="@id/upr_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/welcome_back"
        android:textAppearance="@style/TextAppearance.Gigzz.Headline6"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upr_design" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:letterSpacing="0"
        android:text="@string/enter_credentials"
        android:textAppearance="@style/TextAppearance.Gigzz.Subtitle2"
        android:textColor="@color/grey_shade_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtMail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_mail"
            android:includeFontPadding="false"
            android:inputType="text"
            android:lines="1"
            android:textColorHint="@color/grey_shade_2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edtMail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_password"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:lines="1"
            android:textColorHint="@color/grey_shade_2" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:letterSpacing="0"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.Gigzz.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/enter_password"
        app:layout_constraintTop_toBottomOf="@id/enter_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:enabled="false"
        android:letterSpacing="0"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_120sdp"
        android:text="@string/not_having_account"
        android:textAppearance="@style/TextAppearance.Gigzz.Subtitle2"
        android:textColor="@color/grey_shade_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>