<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.OtherUserAboutFragment">

    <TextView
        android:id="@+id/tvOverviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:layout_marginTop="@dimen/_15sdp"
        android:textAppearance="@style/TextAppearance.Gigzz.Body3"/>

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.Gigzz.Caption2"/>

    <TextView
        android:id="@+id/tvLocationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAppearance="@style/TextAppearance.Gigzz.Body3"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.Gigzz.Caption2"/>

    <TextView
        android:id="@+id/tvContactTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAppearance="@style/TextAppearance.Gigzz.Body3"/>

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.Gigzz.Caption2"/>

</androidx.appcompat.widget.LinearLayoutCompat>