<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment"
    tools:ignore="contentDescription">

    <ImageView
        android:id="@+id/upr_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/upr_design"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="@id/upr_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/create_profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Gigzz.Headline6"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upr_design" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:letterSpacing="0"
        android:text="@string/profile_today"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Gigzz.Subtitle2"
        android:textColor="@color/grey_shade_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:hint="@string/hint_mail"
        app:boxStrokeColor="@color/text_input_stroke_selector"
        android:textAppearance="?attr/textAppearanceButton"
        android:textColorHint="@color/grey_shade_2"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:enabled="false"
        android:letterSpacing="0"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_150sdp"
        android:text="@string/already_have_account"
        android:textAppearance="@style/TextAppearance.Gigzz.Subtitle2"
        android:textColor="@color/grey_shade_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/terms_conditions_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:letterSpacing="0"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Gigzz.Subtitle2"
        android:textColor="@color/grey_shade_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>